* New context menu to go to any played move on board or edit its annotation.
* Additional warning dialogs to reduce the likelihood that an autosaved
  game is lost, for example because it was changed by another instance
  of Pentobi.
* The computer level is now set in the computer colors dialog. It is no
  longer stored in the settings separately for each game variant.
* Reintroduced forward10/backward10 toolbuttons on desktop.
* New shortcut keys for moving the selected piece in larger steps
  on the board and for rotating and flipping it.
* New menu item Recent Files/Clear List.
* New shortcut Ctrl+Shift+H, which behaves like Find Move (Ctrl+H) but
  iterates backwards through the list of legal moves.
* The game analysis now always contains a value for the position after
  the last move, which is useful for analyzing unfinished games.
* The Android version now shows an error before open/save if permission
  to access storage have not been granted.
* Android: color dot of the color to play is no longer surrounded by a border
  because the color to play is already indicated by having its unplayed pieces
  at the top.
* The translation source strings for menu items and actions no longer use
  an ampersand to mark a mnemonic but a separate translation string for
  the mnemonic.

Bug fixes:

* Picking up a piece from board in setup mode sometimes switched piece
  instances in game variants with multiple instances per piece.
* Workaround for a bug that made the analysis graph only partially visible
  on Android low-density devices (QTBUG-69102)


Version 15.0.UNKNOWN (v15-fixes)
================================

General:

* Fixed bugs in handling AE (add empty) SGF property.

Desktop version:

* Avoid duplicate menu mnemonics and fixed minor errors in translations.
* Thumbnailer did not paint junctions of setup pieces in Nexos and Callisto.

Android version:

* Program could hang or crash if quit during running game analysis.