@@ -31,6 +31,10 @@ ToolButton {
                     Screen.devicePixelRatio * 8)
     }
 
+    Behavior on opacity {
+        NumberAnimation { duration: gameDisplay.animationDurationFast }
+    }
+
     opacity: root.enabled ? 0.5 : 0.25
     hoverEnabled: false
     display: AbstractButton.IconOnly
