@@ -21,6 +21,7 @@
 <file>light/pentobi-play.svg</file>
 <file>light/pentobi-previous-variation.svg</file>
 <file>light/pentobi-rated-game.svg</file>
+<file>light/pentobi-stop.svg</file>
 <file>light/pentobi-undo.svg</file>
 <file>light/piece-manipulator-desktop.svg</file>
 <file>light/piece-manipulator-desktop-legal.svg</file>
