@@ -18,6 +18,7 @@ Version 15.UNKNOWN (master)
   of Pentobi.
 * The computer level is now set in the computer colors dialog. It is no
   longer stored in the settings separately for each game variant.
+* New toolbar button to stop computer play or game analysis.
 * Reintroduced forward10/backward10 toolbuttons on desktop.
 * New shortcut keys for moving the selected piece in larger steps
   on the board and for rotating and flipping it.
